--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -13,6 +13,12 @@
     {% endif %}
   </title>
 
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+
   <!-- CSS -->
   <!-- build:css /assets/stylesheets/style.min.css -->
   <link rel="stylesheet" href="/assets/stylesheets/style.css">
@@ -21,8 +27,9 @@
 
   <!-- JS -->
   <!-- build:js /assets/javascript/all.min.js -->
-  <script src="/assets/javascript/javascript.js"></script> 
-  <script src="/assets/javascript/somejavascript.js"></script> 
+  <script src="/assets/javascript/somejavascript.js"></script>
+  <script src="http://localhost/dojo/dojo.js"></script>
+
   <!-- endbuild -->
 
   <!-- Icons -->
