--- a/src/_includes/sidebar.html
+++ b/src/_includes/sidebar.html
@@ -24,15 +24,11 @@
         {% endif %}
       {% endif %}
     {% endfor %}
-
-    <a class="sidebar-nav-item" href="https://github.com/sondr3/generator-jekyllized">Jekyllized on Github</a>
-    <a class="sidebar-nav-item" href="https://github.com/poole">Poole on Github</a>
-    <span class="sidebar-nav-item">Run by <a href="https://twitter.com/{{ site.author.twitter}}">@{{ site.author.name }}<a/></span>
   </nav>
 
-  <div class="sidebar-item">
+  <div class="sidebar-item text-center">
     <p>
-      &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+      &copy; {{ site.time | date: '%Y' }}. Esteban G. <br>All rights reserved.
     </p>
   </div>
 </div>
