--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -28,7 +28,8 @@
   <!-- JS -->
   <!-- build:js /assets/javascript/all.min.js -->
   <script src="/assets/javascript/somejavascript.js"></script>
-  <script src="http://localhost/dojo/dojo.js"></script>
+  <script data-dojo-config="async: 1" 
+          src="//ajax.googleapis.com/ajax/libs/dojo/1.10.4/dojo/dojo.js"></script>
 
   <!-- endbuild -->
 
