--- a/src/assets/scss/learning-dojo.scss
+++ b/src/assets/scss/learning-dojo.scss
@@ -27,6 +27,8 @@
 	position: fixed;
 	bottom: 2%;
 	right: 10%;
+	z-index: 100;
+	background-color: #fff;
 	button{
 		background: none;
 		border: none;
